syntax = "proto3";

package ai.lzy.v1;

option java_outer_classname = "LMB";
option java_package = "ai.lzy.v1.common";

enum SchemeType {
  UNSPECIFIED = 0;
  plain = 1;
  proto = 2;
  cloudpickle = 3;
}

message DataScheme {
  string type = 1;
  string schemeType = 2;
}
